# Spitch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
data/: spitch.desktop.in
docs/: INSTALL.md
scripts/: install.sh  uninstall.sh
src/spitch/: __init__.py  __main__.py  autostart.py  cli.py  cmdsock.py  config.py  daemon.py  eventbus.py  history.py
src/spitch/hotkey/: __init__.py  evdev_listener.py
src/spitch/inject/: __init__.py  text_injector.py
src/spitch/tray/: __init__.py  indicator.py
src/spitch/ui/: __init__.py  config_dialog.py  console.py  probe.py
src/spitch/voice/: __init__.py  audio.py  controller.py  doubao.py
tests/: __init__.py  _ws_stdlib.py  conftest.py  e2e_smoke.sh  live_voice_pipeline.py  mock_doubao_server.py  probe_real_endpoint.sh  test_audio_prebuffer.py  test_autostart.py  test_cmdsock.py  test_config.py  test_daemon_release_routing.py  test_doubao_client_mock.py  test_doubao_protocol.py  test_history.py  test_hotkey_listener.py  test_tray_label.py  test_voice_controller.py
